unpackaged/main/default/objects/PricebookEntry/fields/Ala_Carte__c.field-meta.xml
<CustomField>
    <fullName>Ala_Carte__c</fullName>
    <description>For easy access in Manage Products Flow</description>
    <formula>Product2.Ala_Carte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ala Carte?</label>
    <type>Checkbox</type>
</CustomField>