unpackaged/main/default/objects/PricebookEntry/fields/Discount_Approval_Floor__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Floor__c</fullName>
    <inlineHelpText>approval will be required is price offered is less than this value</inlineHelpText>
    <label>Discount Approval Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>