unpackaged/main/default/objects/PricebookEntry/fields/One_Time_Fee__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Fee__c</fullName>
    <description>For easy access in Manage Products Flow</description>
    <formula>Product2.One_Time_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One Time Fee?</label>
    <type>Checkbox</type>
</CustomField>