unpackaged/main/default/objects/PricebookEntry/fields/PriceBookEntryID__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntryID__c</fullName>
    <formula>CaseSafeID (Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceBookEntryID</label>
    <type>Text</type>
</CustomField>