unpackaged/main/default/objects/PricebookEntry/fields/Primary_Plan_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Plan_Product__c</fullName>
    <formula>Product2.Primary_Plan_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Plan Product</label>
    <type>Checkbox</type>
</CustomField>