unpackaged/main/default/objects/PricebookEntry/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT(Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Family as defined on the Product Record</inlineHelpText>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>