unpackaged/main/default/objects/PricebookEntry/fields/Tier_Plan_Product__c.field-meta.xml
<CustomField>
    <fullName>Tier_Plan_Product__c</fullName>
    <description>For easy access in Manage Products Flow</description>
    <formula>Product2.Tier_Plan_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Plan Product?</label>
    <type>Checkbox</type>
</CustomField>