unpackaged/main/default/objects/PricebookEntry/fields/Tier_Plans_Available__c.field-meta.xml
<CustomField>
    <fullName>Tier_Plans_Available__c</fullName>
    <description>For easy access in Manage Products Flow
-should only contain the values that are in the flow Tier_Plan custom pick list choice set</description>
    <formula>IF ( INCLUDES ( Product2.Tier_Plans_Available__c , &quot;Launch+&quot; ), &quot;Launch+; &quot;,null ) &amp;
IF ( INCLUDES ( Product2.Tier_Plans_Available__c , &quot;Base&quot; ), &quot;Base; &quot;,null ) &amp;
IF ( INCLUDES ( Product2.Tier_Plans_Available__c , &quot;Brand+&quot; ), &quot;Brand+; &quot;,null ) &amp;
IF ( INCLUDES ( Product2.Tier_Plans_Available__c , &quot;Growth+&quot; ), &quot;Growth+; &quot;,null ) &amp;
IF ( INCLUDES ( Product2.Tier_Plans_Available__c , &quot;Premium+&quot; ), &quot;Premium+; &quot;,null ) &amp;
IF ( INCLUDES ( Product2.Tier_Plans_Available__c , &quot;Enterprise&quot; ), &quot;Enterprise; &quot;,null ) &amp;
IF ( INCLUDES ( Product2.Tier_Plans_Available__c , &quot;Leads Pro&quot; ), &quot;Leads Pro; &quot;,null ) &amp;
IF ( INCLUDES ( Product2.Tier_Plans_Available__c , &quot;SEO Pro&quot; ), &quot;SEO Pro; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Plans Available</label>
    <type>Text</type>
</CustomField>